--- a/web/index.html
+++ b/web/index.html
@@ -57,5 +57,6 @@
   </script>
 <script src ="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
 <script src ="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js" ></script>
+<script type="application/id+json"></script>
 </body>
 </html>
